Did my homework

--- a/Encryptor/MainWindow.xaml
+++ b/Encryptor/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Encryptor"
         mc:Ignorable="d"
-        Title="Encryptor" Height="450" Width="400" WindowStyle="None" MouseDown="Window_MouseDown" AllowsTransparency="True">
+        Title="Encryptor" Height="450" Width="400" WindowStyle="None" MouseDown="Window_MouseDown" 
+        AllowsTransparency="True" Closed="MainWindow_OnClosed" Loaded="MainWindow_OnLoaded">
     <Grid Margin="5,0,5,5" Background="#2B2B2B">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -18,10 +19,10 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Row="0" Background="#1E1E1E">
-            <TextBlock Text="Encryptor" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" Foreground="White"/>
-            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,10,0">
-                <Button x:Name="Minimize" Content="-" Height="25" Width="25" Click="Minimize_Click" Background="Transparent" Foreground="White"/>
-                <Button x:Name="Close" Content="X" Height="25" Width="25" Click="Close_Click" Background="Transparent" Foreground="White"/>
+            <TextBlock Text="Encryptor" Style="{StaticResource EncryptorTextBlock.Style}"/>
+            <StackPanel Style="{StaticResource StackPanel.Style}">
+                <Button x:Name="Minimize" Content="-" Style="{StaticResource MinimizeAndCloseButton.Style}" Click="Minimize_Click"/>
+                <Button x:Name="Close" Content="X" Style="{StaticResource MinimizeAndCloseButton.Style}" Click="Close_Click"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1" Grid.ColumnSpan="2" Margin="0,10,0,0">
@@ -29,23 +30,23 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Input" HorizontalAlignment="Center" Foreground="White"/>
-            <TextBox x:Name="InputTextBox" Grid.Row="1" BorderBrush="#1E1E1E" Background="#2B2B2B" Foreground="White" Margin="5" TextWrapping="Wrap"/>
+            <TextBlock Text="Input" Style="{StaticResource TextBlock.Style}"/>
+            <TextBox x:Name="InputTextBox" Grid.Row="1" Style="{StaticResource TextBlocks.Style}"/>
         </Grid>
         <Grid Grid.Row="2" Grid.ColumnSpan="2" Margin="0,10,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Output" HorizontalAlignment="Center" Foreground="White"/>
-            <TextBox x:Name="OutputTextBox" Grid.Row="1" BorderBrush="#1E1E1E" Background="#2B2B2B" Foreground="White" Margin="5"/>
+            <TextBlock Text="Output" Style="{StaticResource TextBlock.Style}"/>
+            <TextBox x:Name="OutputTextBox" Grid.Row="1" Style="{StaticResource TextBlocks.Style}"/>
         </Grid>
         <UniformGrid Grid.Row="3" Grid.ColumnSpan="2" Rows="1" Margin="0,10,0,0">
-            <Button x:Name="EncryptBtn" Content="Encrypt" Background="#007ACC" Foreground="White" Margin="5" Padding="0,0,5,0" Click="Encrypt"/>
-            <Button x:Name="DecryptBtn" Content="Decrypt" Background="#007ACC" Foreground="White" Margin="5" Padding="0,0,5,0" Click="Encrypt"/>
-            <Button x:Name="LoadBtn" Content="Load" Background="#007ACC" Foreground="White" Margin="5" Padding="0,0,5,0" Click="LoadBtn_OnClick"/>
-            <Button x:Name="SaveBtn" Content="Save" Background="#007ACC" Foreground="White" Margin="5" Padding="0,0,5,0" Click="SaveBtn_OnClick"/>
-            <TextBox x:Name="KeyBox" BorderBrush="#1E1E1E" Background="#2B2B2B" Foreground="White" Margin="5" PreviewTextInput="KeyBox_OnPreviewTextInput"/>
+            <Button x:Name="EncryptBtn" Content="Encrypt" Style="{StaticResource ControlButtons.Style}" Click="Encrypt"/>
+            <Button x:Name="DecryptBtn" Content="Decrypt" Style="{StaticResource ControlButtons.Style}" Click="Encrypt"/>
+            <Button x:Name="LoadBtn" Content="Load" Style="{StaticResource ControlButtons.Style}" Click="LoadBtn_OnClick"/>
+            <Button x:Name="SaveBtn" Content="Save" Style="{StaticResource ControlButtons.Style}" Click="SaveBtn_OnClick"/>
+            <TextBox x:Name="KeyBox" Style="{StaticResource TextBlocks.Style}" TextWrapping="NoWrap" PreviewTextInput="KeyBox_OnPreviewTextInput" TextChanged="KeyBox_TextChanged"/>
         </UniformGrid>
     </Grid>
 </Window>
